# Awesome-Human-AI-Coevolution-Paper-List

./: .gitignore  CLAUDE.md  README.md  adjacent.yaml  main.py  papers.yaml  pyproject.toml
.github/workflows/: deploy-site.yml
deep_research/: PROMPT.md  README.md  master_candidate_list.md  master_candidate_list_v2.md  needs_review.md  phase_classification.md  phased_framework.md  report1.md  report2.md  report3.md  report_v2_1.md  report_v2_2.md  verification_pass.md  verification_pass_v2.md
readme_template/: template.md
scripts/: regen.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: robots.txt
site/public/blog/: index.html
site/src/components/: Footer.astro  PaperCard.astro  TopBar.astro
site/src/islands/: PaperBrowser.tsx  StatsCharts.tsx  UiPrimitives.tsx
site/src/layouts/: Base.astro
site/src/lib/: parsePapers.ts  site.ts  star.ts
site/src/pages/: about.astro  adjacent.astro  index.astro  rss.xml.ts  stats.astro
site/src/pages/papers/: [slug].astro  index.astro
site/src/styles/: global.css
